--- a/style.css
+++ b/style.css
@@ -466,7 +466,7 @@ body {
     display: inline-block;
     background: #fff;
     border-radius: 35px;
-    color: #00bd2a;
+    color: #a149c4  ;
     box-shadow: 0 8px 20px -2px rgba(158, 152, 153, 0.5);
 }
 
